// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form message can render with no details and intent 1`] = `
<div>
  <div
    class="form-message"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-standard bp5-icon-info-sign"
        data-icon="info-sign"
      />
      my summary
    </span>
  </div>
</div>
`;

exports[`Form message can render with no intent 1`] = `
<div>
  <div
    class="form-message"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-info-sign"
      >
        <svg
          data-icon="info-sign"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;

exports[`Form message can render with with different intents 1`] = `
<div>
  <div
    class="form-message"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-info-sign"
      >
        <svg
          data-icon="info-sign"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;

exports[`Form message can render with with different intents 2`] = `
<div>
  <div
    class="form-message form-message--info"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-info-sign bp5-intent-primary"
      >
        <svg
          data-icon="info-sign"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;

exports[`Form message can render with with different intents 3`] = `
<div>
  <div
    class="form-message form-message--info"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-info-sign bp5-intent-success"
      >
        <svg
          data-icon="info-sign"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;

exports[`Form message can render with with different intents 4`] = `
<div>
  <div
    class="form-message form-message--warning"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-standard bp5-icon-warning-sign bp5-intent-warning"
        data-icon="warning-sign"
      />
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;

exports[`Form message can render with with different intents 5`] = `
<div>
  <div
    class="form-message form-message--danger"
  >
    <span
      class="form-message__summary"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-standard bp5-icon-error bp5-intent-danger"
        data-icon="error"
      />
      my summary
    </span>
    <span
      class="form-message__recommendation"
    >
      my details
    </span>
  </div>
</div>
`;
